--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=8090
+server.port=9090
 
 app.directory=testDirectory
 
 multipart.maxFileSize=100MB
 
-server.address=192.168.0.102
+#server.address=192.168.0.102
 
 spring.datasource.platform=h2
